F32 upgrade banner isn't dark enough for overlaid white text
Look at this screenshot of the F32 upgrade;
The banner is not dark enough for the white text. It's especially hard to read the word "Upgrade," for example. I think switching to dark text instead of light text would make sense for improved contrast, since this background is very light. Alternatively, darkening the entire background might work.