Use black font for Fedora distro upgrades

This makes the text more legible on light backgrounds (such as the F32
distro upgrade background).

Fixes https://gitlab.gnome.org/GNOME/gnome-software/issues/956